# SimArm

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  main.cpp  map.cpp  map.h
SimArm.dir/Debug/: SimArm.exe.recipe  SimArm.ilk
SimArm.dir/Debug/SimArm.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  SimArm.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
UI/: consoleUI.cpp  consoleUI.h
buildings/: building.cpp  building.h  church.cpp  church.h
entities/: entity.cpp  entity.h  monkey.cpp  monkey.h  mountain.cpp  mountain.h  naturalObjects.cpp  naturalObjects.h  tree.cpp  tree.h
utils/: utils.cpp  utils.h
worldManager/: world.cpp  world.h
x64/Debug/ZERO_CHECK/: ZERO_CHECK.recipe
x64/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
